# classic-actors

./: README.md  TODO.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml
sources/classic/actors/: __init__.py  actor.py  classes.py  decorators.py  primitives.py  supervisor.py
tests/: decorators.py  test_actor.py  test_supervisor.py
