[metadata]
name = classic-actors
version = 0.0.1
description = Provides actors
author = Sergei Variasov
author_email = variasov@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/variasov/classic_actors
project_urls =
    Bug Tracker = https://github.com/variasov/classic_actors/issues
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta


[options]
packages = find_namespace:
python_requires = >=3.10
package_dir =
    = sources


[options.packages.find]
where = sources

[options.extras_require]
dev =
    pytest~=6.2
    pytest-cov~=2.12
    twine~=3.4
    build~=0.7
